test: PreviousArticleServiceTest로 이동